tests/ui/closures/suggest-impl-fn-return-for-capturing-closure.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:8:5
   |
LL | fn no_args(a: i32) -> fn() -> i32 {
   |                       ----------- expected `fn() -> i32` because of return type
LL |     || a
   |     ^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn() -> i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:8:5: 8:7}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:8:8
   |
LL |     || a
   |        ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn no_args(a: i32) -> fn() -> i32 {
LL + fn no_args(a: i32) -> impl Fn() -> i32 {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:13:5
   |
LL | fn no_args_no_return(a: i32) -> fn() {
   |                                 ---- expected `fn()` because of return type
LL |     || println!("{}", a)
   |     ^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn()`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:13:5: 13:7}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:13:23
   |
LL |     || println!("{}", a)
   |                       ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn no_args_no_return(a: i32) -> fn() {
LL + fn no_args_no_return(a: i32) -> impl Fn() {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:18:5
   |
LL | fn one_arg(a: i32) -> fn(i32) -> i32 {
   |                       -------------- expected `fn(i32) -> i32` because of return type
LL |     |x| x + a
   |     ^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn(i32) -> i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:18:5: 18:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:18:13
   |
LL |     |x| x + a
   |             ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg(a: i32) -> fn(i32) -> i32 {
LL + fn one_arg(a: i32) -> impl Fn(i32) -> i32 {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:23:5
   |
LL | fn one_arg_unsafe(a: i32) -> unsafe fn(i32) -> i32 {
   |                              --------------------- expected `unsafe fn(i32) -> i32` because of return type
LL |     |x| x + a
   |     ^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `unsafe fn(i32) -> i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:23:5: 23:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:23:13
   |
LL |     |x| x + a
   |             ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg_unsafe(a: i32) -> unsafe fn(i32) -> i32 {
LL + fn one_arg_unsafe(a: i32) -> impl Fn(i32) -> i32 {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:28:5
   |
LL | fn one_arg_extern(a: i32) -> extern "C" fn(i32) -> i32 {
   |                              ------------------------- expected `extern "C" fn(i32) -> i32` because of return type
LL |     |x| x + a
   |     ^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `extern "C" fn(i32) -> i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:28:5: 28:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:28:13
   |
LL |     |x| x + a
   |             ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg_extern(a: i32) -> extern "C" fn(i32) -> i32 {
LL + fn one_arg_extern(a: i32) -> impl Fn(i32) -> i32 {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:33:5
   |
LL | fn one_arg_no_return(a: i32) -> fn(i32) {
   |                                 ------- expected `fn(i32)` because of return type
LL |     |x| println!("{}", x + a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn(i32)`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:33:5: 33:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:33:28
   |
LL |     |x| println!("{}", x + a)
   |                            ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg_no_return(a: i32) -> fn(i32) {
LL + fn one_arg_no_return(a: i32) -> impl Fn(i32) {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:38:5
   |
LL | fn one_arg_return_unit(a: i32) -> fn(i32) -> () {
   |                                   ------------- expected `fn(i32)` because of return type
LL |     |x| println!("{}", x + a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn(i32)`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:38:5: 38:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:38:28
   |
LL |     |x| println!("{}", x + a)
   |                            ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg_return_unit(a: i32) -> fn(i32) -> () {
LL + fn one_arg_return_unit(a: i32) -> impl Fn(i32) -> () {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:43:5
   |
LL |   fn one_arg_ref(a: i32) -> fn(&i32) -> &i32 {
   |                             ---------------- expected `for<'a> fn(&'a i32) -> &'a i32` because of return type
LL | /     |x| {
LL | |
LL | |         println!("{}", a);
LL | |         x
LL | |     }
   | |_____^ expected fn pointer, found closure
   |
   = note: expected fn pointer `for<'a> fn(&'a i32) -> &'a i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:43:5: 43:8}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:45:24
   |
LL |         println!("{}", a);
   |                        ^ `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn one_arg_ref(a: i32) -> fn(&i32) -> &i32 {
LL + fn one_arg_ref(a: i32) -> impl Fn(&'_ i32) -> &'_ i32 {
   |

error[E0308]: mismatched types
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:51:5
   |
LL | fn multi_args(a: i32, b: i32) -> fn(i32, i32) -> i32 {
   |                                  ------------------- expected `fn(i32, i32) -> i32` because of return type
LL |     |x, y| x + y + a + b
   |     ^^^^^^^^^^^^^^^^^^^^ expected fn pointer, found closure
   |
   = note: expected fn pointer `fn(i32, i32) -> i32`
                 found closure `{closure@$DIR/suggest-impl-fn-return-for-capturing-closure.rs:51:5: 51:11}`
note: closures can only be coerced to `fn` types if they do not capture any variables
  --> $DIR/suggest-impl-fn-return-for-capturing-closure.rs:51:20
   |
LL |     |x, y| x + y + a + b
   |                    ^   ^ `b` captured here
   |                    |
   |                    `a` captured here
help: change the return type to return a type-erased closure instead
   |
LL - fn multi_args(a: i32, b: i32) -> fn(i32, i32) -> i32 {
LL + fn multi_args(a: i32, b: i32) -> impl Fn(i32, i32) -> i32 {
   |

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
